--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/263d4f855d.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -68,10 +70,19 @@
             <button type="button" class="btn btn-dark mt-2">Contact Us</button>
         
     </div>
-
+<div style="height:1em;"></div>
     <div class="circleBase type3">
 
     </div>
+     <footer>
+       
+      <div style="background-color:lightgrey; color: white; height: 3em; width:100%; position:absolute; 
+      text-align: center;">
+        <div class="container">
+         <span>Copyright 2020 Vase   <a href="https://github.com/ConnerFoster/Vase">Github</a></span> 
+        </div>
+      </div>
+    </footer> 
 
 
     <!-- Optional JavaScript -->
