pretty much finished

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="https://github.com/ConnerFoster/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Projects
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Calculator</a>
-                <a class="dropdown-item" href="#">Library</a>
+                <a class="dropdown-item" href="https://github.com/ConnerFoster/">Calculator</a>
+                <a class="dropdown-item" href="https://github.com/ConnerFoster/">Library</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">All</a>
+                <a class="dropdown-item" href="https://github.com/ConnerFoster/">All</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" tabindex="-1">Contact Us</a>
+              <a class="nav-link" href="contact.html" tabindex="-1">Contact Us</a>
             </li>
         </ul>
         </div>
