maybe actually done

--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,10 @@
                         Projects
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="https://github.com/ConnerFoster/">Calculator</a>
-                        <a class="dropdown-item" href="https://github.com/ConnerFoster/">Library</a>
+                        <a class="dropdown-item" target="_blank" href="https://github.com/ConnerFoster/">Calculator</a>
+                        <a class="dropdown-item" target="_blank" href="https://github.com/ConnerFoster/">Library</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="https://github.com/ConnerFoster/">All</a>
+                        <a class="dropdown-item" target="_blank" href="https://github.com/ConnerFoster/">All</a>
                       </div>
                     </li>
                     <li class="nav-item active">
