trying to fix for different screen sizes

--- a/index.html
+++ b/index.html
@@ -56,18 +56,20 @@
       <hr>
       <br>
       <br>
+      <div style="height:15em">
+      </div>
       <div class="container">
         <image class="float-right" src="./Photos/techstuff.png" id="tech-photo"></image>
     </div>
-<div style="height:50px">
+<div style="height:2em">
 
 </div>
     <div class="container">
         <p class="h1 font-weight-bold text-light">Vase is developing Web Applications
             and Mobile Applications for clients around the world.</p>
             <p class="h3 text-muted">Contact us today to see what we can do for you.</p>
-            <button type="button" class="btn btn-light mt-2">View Portfolio</button>
-            <button type="button" class="btn btn-dark mt-2">Contact Us</button>
+            <a class="btn btn-light mt-2" target="_blank" href="https://github.com/ConnerFoster" role="button">View Portfolio</a>
+            <a class="btn btn-dark mt-2" target="_blank" href="contact.html" role="button">Contact Us</a>
         
     </div>
 <div style="height:1em;"></div>
@@ -76,7 +78,7 @@
     </div>
      <footer>
        
-      <div style="background-color:lightgrey; color: white; height: 3em; width:100%; position:absolute; 
+      <div style="background-color:lightgray; color: white; height: 3em; width:100%; position:absolute; 
       text-align: center;">
         <div class="container">
          <span>Copyright 2020 Vase   <a href="https://github.com/ConnerFoster/Vase">Github</a></span> 
