--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
               
               </div>
               <hr>
-              <div style="height:8em;">
+              <div class="about-spacer">
             </div>
               <div class="container">
                   <h1 class="text-light">About Vase</h1>
@@ -73,8 +73,6 @@
                     <span class="fas fat fa-smile"></span>
                   </div>
                 </div>
-                <div style="height:28px">
-                </div>
 
                 <div class="row">
                   <div class="col-md-4 text-center">
@@ -89,7 +87,7 @@
                 </div>
               </div>
 
-              <div style="height:22em">
+              <div class="about-spacer-footer">
               </div>
 
               <footer>
