--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,9 @@
               </nav>
               </div>
               <hr>
+              <div class="contact-spacer">
+                
+              </div>
               <div class="container">
                 <h1 class="text-light text-center">Contact Us</h1>
               </div>
