--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                 </div>
               </div>
 
-              <div style="height:22em">
+              <div class="about-spacer">
               </div>
 
               <footer>
